<resources>
    <string name="app_name">MySelfApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_daily_activity">Daily Activity</string>
    <string name="menu_music">Music</string>


    <string name="email">haikalimanf@gmail.com</string>
    <string name="nama">Haikal Iman Firdaus</string>
    <string name="hello_blank_fragment">hello_blank_fragment</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="greeting">Hello Everyone!</string>
    <string name="welcome_text">Welcome to My Personal \n Space.</string>

    <string name="next">Next</string>

    <string name="description_page2_onboarding"><![CDATA[Hobbies, Dreams, & Daily \n Adventures.]]></string>
    <string name="title_page2_onboarding">Explore My World</string>
    <string name="title_page3_onboarding"><![CDATA[Connect & Discover]]></string>
    <string name="finish">Finish</string>


    <string name="description">Description</string>
    <string name="description_result">Saya adalah Mahasiswa S1 Teknik Informatika di Universitas Komputer Indonesia dengan minat yang kuat pada pengembangan perangkat lunak mobile dan machine learning. Selama pendidikan saya, saya telah mengasah kemampuan saya dalam berbagai teknologi dan bahasa pemrograman yang relevan dengan bidang-bidang ini. Saya bersemangat untuk terus belajar dan meningkatkan kemampuan saya, dan saya ingin sekali menghadapi tantangan baru di industri teknologi.</string>
    <string name="hobi">Hobi</string>
    <string name="gym">Gym</string>
    <string name="running">Running</string>
    <string name="read">Read</string>
    <string name="ketertarikan">Ketertarikan</string>
    <string name="mobile_dev">Mobile Dev</string>
    <string name="machine_learning">ML</string>
    <string name="back_end">Back End</string>
    <string name="cita_cita">Cita cita</string>
    <string name="pergi_ke_japan">Pergi ke Japan</string>
    <string name="pergi_ke_old_trafford">Pergi ke Old Trafford</string>
    <string name="address">Bandung, Indonesia</string>
    <string name="kontak">Kontak</string>
    <string name="find_me">Find Me</string>
    <string name="about">About</string>
    <string name="version_0_1">Version 0.1</string>
    <string name="musik_kesukaan_saya">Musik Kesukaan saya</string>
    <string name="video_favorite">Video Favorite</string>

</resources>