<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/background_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/progamming" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="180dp"
                android:layout_marginBottom="16dp"
                android:src="@drawable/foto_profile"
                app:civ_border_color="#FF000000" />

        </FrameLayout>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/nama"
            android:textAlignment="center"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="12dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textStyle="bold"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description_result"
                android:textSize="15sp"
                android:justificationMode="inter_word"
                android:breakStrategy="simple" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hobi"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_marginTop="12dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnGym"
                    android:layout_width="0dp"
                    android:layout_height="36dp"
                    android:layout_weight="1"
                    android:text="@string/gym"
                    android:textColor="@color/white"
                    android:background="@drawable/button_rounded"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:layout_margin="8dp" />

                <Button
                    android:id="@+id/btnRunning"
                    android:layout_width="0dp"
                    android:layout_height="36dp"
                    android:layout_weight="1"
                    android:text="@string/running"
                    android:textColor="@color/white"
                    android:background="@drawable/button_rounded"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:layout_margin="8dp" />

                <Button
                    android:id="@+id/btnRead"
                    android:layout_width="0dp"
                    android:layout_height="36dp"
                    android:layout_weight="1"
                    android:text="@string/read"
                    android:textColor="@color/white"
                    android:background="@drawable/button_rounded"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:layout_margin="8dp" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ketertarikan"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_marginTop="12dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnMobileDev"
                    android:layout_width="0dp"
                    android:layout_height="36dp"
                    android:layout_weight="1"
                    android:text="@string/mobile_dev"
                    android:textColor="@color/white"
                    android:background="@drawable/button_rounded"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:layout_margin="8dp" />

                <Button
                    android:id="@+id/btnML"
                    android:layout_width="0dp"
                    android:layout_height="36dp"
                    android:layout_weight="1"
                    android:text="@string/machine_learning"
                    android:textColor="@color/white"
                    android:background="@drawable/button_rounded"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:layout_margin="8dp" />

                <Button
                    android:id="@+id/btnBackEnd"
                    android:layout_width="0dp"
                    android:layout_height="36dp"
                    android:layout_weight="1"
                    android:text="@string/back_end"
                    android:textColor="@color/white"
                    android:background="@drawable/button_rounded"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:layout_margin="8dp" />

            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cita_cita"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_marginTop="12dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="12dp"
                >

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/pergi_ke_old_trafford"
                    android:textColor="@color/white"
                    android:background="@drawable/button_rounded"
                    android:layout_margin="8dp"
                    android:singleLine="false"
                    android:ellipsize="none" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="36dp"
                    android:layout_weight="1"
                    android:text="@string/pergi_ke_japan"
                    android:textColor="@color/white"
                    android:background="@drawable/button_rounded"
                    android:layout_margin="8dp"
                    android:singleLine="false"
                    android:ellipsize="none" />

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
